<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.siddharth.globetrotter.NewPlaceImageActivity">

    <ImageView
        android:id="@+id/placeImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/newplaceimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/loadingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_image_will_be_displayed_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/camerabutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/placeImage"
        app:layout_constraintTop_toBottomOf="@+id/placeImage"
        app:layout_constraintVertical_bias="1.0"
        android:src="@drawable/cameraicon"
        android:background="@android:color/transparent"
        android:onClick="cameraButtonTapped"/>

    <ImageButton
        android:id="@+id/libraryButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/librarybutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/placeImage"
        app:layout_constraintTop_toBottomOf="@+id/placeImage"
        android:src="@drawable/libraryicon"
        android:background="@android:color/transparent"
        app:layout_constraintVertical_bias="1.0"
        android:onClick="libraryButtonTapped" />

</android.support.constraint.ConstraintLayout>
