<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.siddharth.globetrotter.PlacesListView">

    <ImageView
        android:id="@+id/placeThumbnailImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/placethumbnailimage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/placeName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        app:layout_constraintLeft_toRightOf="@+id/placeThumbnailImage"
        app:layout_constraintRight_toLeftOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="@+id/placeThumbnailImage"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        android:gravity="left|center"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="21dp"
        android:layout_height="40dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/cellarrow"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cellarrow"
        app:layout_constraintBottom_toBottomOf="@+id/placeName"
        android:layout_marginBottom="0dp" />

</android.support.constraint.ConstraintLayout>
